[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "start"
path = "src/main.rs"

[[bin]]
name = "setup"
path = "src/setup.rs"


[dependencies]
actix-web = "4"
actix-rt = "2"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.97", features = ["derive"] }
once_cell = "1.16.0"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "macros", "migrate", "decimal", "json"] }
